--- a/libgit2-sys/Cargo.toml
+++ b/libgit2-sys/Cargo.toml
@@ -18,7 +18,7 @@ path = "lib.rs"
 
 [dependencies]
 libc = "0.2"
-libssh2-sys = { version = "0.2.11", optional = true }
+libssh2-sys = { git="https://github.com/toshiyuki-rs/ssh2-rs.git", version = "0.2.11", optional = true }
 libz-sys = "1.0.22"
 
 [build-dependencies]
@@ -26,7 +26,7 @@ pkg-config = "0.3.7"
 cc = { version = "1.0.42", features = ['parallel'] }
 
 [target.'cfg(unix)'.dependencies]
-openssl-sys = { version = "0.9", optional = true }
+openssl-sys = { git="https://github.com/toshiyuki-rs/rust-openssl.git", version = "0.9", optional = true }
 
 [features]
 ssh = ["libssh2-sys"]
